# video-convert-tools

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
src/video_convert_tools/: basics.py  convert_and_replace.py  convert_and_sort.py  logging.py
test/: test_basics.py
test/data/: ffv1_pcm.avi  generate_data.ps1  subs.srt
